import {fromJS} from 'immutable'
import configureMockStore, {MockStoreEnhanced} from 'redux-mock-store'
import thunk from 'redux-thunk'

import {EMAIL_INTEGRATION_TYPE} from 'constants/integration'
import {initApp, notifyAccountNotVerified, notifyUserImpersonated} from 'init'
import {RootState} from 'state/types'
import {user} from 'fixtures/users'
import {assumeMock} from 'utils/testing'
import {GorgiasInitialState, InitialReactQueryState} from 'types'
import {account} from 'fixtures/account'
import {initDatadogLogger, initDatadogRum} from 'utils/datadog'
import * as envUtils from 'utils/environment'
import {initErrorReporter} from 'utils/errors'

const mockStore = configureMockStore([thunk])

type fromJSType = typeof fromJS

jest.mock('common/store', () => {
    const {fromJS} = jest.requireActual('immutable')
    return {
        store: {
            dispatch: jest.fn(),
            getState: () => ({
                billing: (fromJS as fromJSType)([]),
                currentAccount: (fromJS as fromJSType)({id: 1}),
                currentUser: (fromJS as fromJSType)({id: 1}),
            }),
        },
    }
})

jest.mock('utils/datadog')
jest.mock('utils/errors')
jest.mock('utils/launchDarkly')

jest.mock('utils/environment')
const envVarsMock = envUtils.envVars as envUtils.EnvVars
const getEnvironmentMock = assumeMock(envUtils.getEnvironment)
const isDevelopmentMock = assumeMock(envUtils.isDevelopment)
const isStagingMock = assumeMock(envUtils.isStaging)
const isProductionMock = assumeMock(envUtils.isProduction)

describe('init', () => {
    let reduxStore: MockStoreEnhanced<unknown>

    beforeEach(() => {
        getEnvironmentMock.mockReturnValue(envUtils.GorgiasUIEnv.Development)
        isDevelopmentMock.mockReturnValue(false)
        isStagingMock.mockReturnValue(false)
        isProductionMock.mockReturnValue(false)
    })

    describe('notifyAccountNotVerified()', () => {
        it('should not do anything because the base email integration is verified', () => {
            reduxStore = mockStore({
                integrations: fromJS({
                    integrations: [
                        {
                            id: 1,
                            type: EMAIL_INTEGRATION_TYPE,
                            meta: {
                                address: `asdasd@${
                                    window.GORGIAS_STATE?.integrations
                                        ?.authentication?.email
                                        ?.forwarding_email_address || ''
                                }`,
                                verified: true,
                            },
                        },
                    ],
                }),
            })

            notifyAccountNotVerified(reduxStore)

            expect(reduxStore.getActions()).toMatchSnapshot()
        })

        it('should dispatch a notification because the base email integration is not verified', () => {
            reduxStore = mockStore({
                integrations: fromJS({
                    integrations: [
                        {
                            id: 1,
                            type: EMAIL_INTEGRATION_TYPE,
                            meta: {
                                address: `asdasd@${
                                    window.GORGIAS_STATE?.integrations
                                        ?.authentication?.email
                                        ?.forwarding_email_address || ''
                                }`,
                                verified: false,
                            },
                        },
                    ],
                }),
            })

            notifyAccountNotVerified(reduxStore)

            expect(reduxStore.getActions()).toMatchSnapshot()
        })
    })

    describe('notifyUserImpersonated()', () => {
        beforeEach(() => {
            window.USER_IMPERSONATED = null
            window.GORGIAS_CLUSTER = 'us-east1-abcd'
            reduxStore = mockStore({
                currentUser: fromJS(user),
                currentAccount: fromJS(account),
            } as RootState)
        })

        it('should not do anything because user is not impersonated', () => {
            notifyUserImpersonated(reduxStore)

            expect(reduxStore.getActions()).toMatchSnapshot()
        })

        it('should dispatch a notification because user is impersonated', () => {
            window.USER_IMPERSONATED = true
            notifyUserImpersonated(reduxStore)

            expect(reduxStore.getActions()).toMatchSnapshot()
        })
    })

    describe('initApp()', () => {
        const defaultSentryDsn = 'test-sentry-dsn'
        const defaultGorgiasRelease = 'test-gorgias-release'
        const defaultWebAppRelease = 'test-web-app-release'
        const defaultGorgiasState = {
            currentAccount: account,
            currentUser: user,
        } as GorgiasInitialState & InitialReactQueryState
        const defaultEnvironment = envUtils.GorgiasUIEnv.Development

        beforeEach(() => {
            window.SENTRY_DSN = defaultSentryDsn
            window.GORGIAS_RELEASE = defaultGorgiasRelease
            envVarsMock.WEB_APP_RELEASE = defaultWebAppRelease
            window.GORGIAS_STATE = defaultGorgiasState
            getEnvironmentMock.mockReturnValue(
                envUtils.GorgiasUIEnv.Development
            )
        })

        describe.each([
            {
                environment: envUtils.GorgiasUIEnv.Staging,
                setup: () => isStagingMock.mockReturnValue(true),
            },
            {
                environment: envUtils.GorgiasUIEnv.Production,
                setup: () => isProductionMock.mockReturnValue(true),
            },
        ])('$environment environment', ({environment, setup}) => {
            beforeEach(() => {
                getEnvironmentMock.mockReturnValue(environment)
                setup()
            })

            it('should init datadog rum', () => {
                const expectedParams: Parameters<typeof initDatadogRum> = [
                    {
                        account,
                        user,
                        environment,
                        serverVersion: defaultGorgiasRelease,
                        clientVersion: defaultWebAppRelease,
                    },
                ]

                initApp()

                expect(initDatadogRum).toHaveBeenLastCalledWith(
                    ...expectedParams
                )
            })

            it('should init datadog logger', () => {
                const expectedParams: Parameters<typeof initDatadogLogger> = [
                    {
                        account,
                        user,
                        environment,
                        serverVersion: defaultGorgiasRelease,
                        clientVersion: defaultWebAppRelease,
                    },
                ]

                initApp()

                expect(initDatadogLogger).toHaveBeenLastCalledWith(
                    ...expectedParams
                )
            })
        })

        it('should not init datadog rum and logger on development environment', () => {
            initApp()

            expect(initDatadogRum).not.toHaveBeenCalled()
            expect(initDatadogLogger).not.toHaveBeenCalled()
        })

        it('should init error reporter when SENTRY_DSN is defined', () => {
            const expectedParams: Parameters<typeof initErrorReporter> = [
                {
                    dsn: defaultSentryDsn,
                    serverVersion: defaultGorgiasRelease,
                    clientVersion: defaultWebAppRelease,
                    environment: defaultEnvironment,
                    currentUser: defaultGorgiasState.currentUser,
                    currentAccount: defaultGorgiasState.currentAccount,
                },
            ]

            initApp()

            expect(initErrorReporter).toHaveBeenLastCalledWith(
                ...expectedParams
            )
        })

        it('should not init error reporter when SENTRY_DSN is an empty string', () => {
            window.SENTRY_DSN = ''

            initApp()

            expect(initErrorReporter).not.toHaveBeenCalled()
        })
    })
})
