// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init notifyAccountNotVerified() should dispatch a notification because the base email integration is not verified 1`] = `
[
  {
    "payload": {
      "allowHTML": true,
      "buttons": [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "account-not-verified-notification",
      "message": "Your email address is not verified. <span class="text-primary">Click here to resend the verification email.</span>",
      "onClick": [Function],
      "position": "top-center",
      "status": "warning",
      "style": "banner",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`init notifyAccountNotVerified() should not do anything because the base email integration is verified 1`] = `[]`;

exports[`init notifyUserImpersonated() should dispatch a notification because user is impersonated 1`] = `
[
  {
    "payload": {
      "allowHTML": true,
      "buttons": [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "user-impersonated-notification",
      "message": "Impersonating <b>alex@gorgias.io</b> in <b>development</b> environment.
                cluster='us-east1-abcd' and account_id=1 and user_id=2",
      "position": "top-center",
      "status": "warning",
      "style": "banner",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`init notifyUserImpersonated() should not do anything because user is not impersonated 1`] = `[]`;
